src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail18.jova
class Test{

  public int foo2(int x){
      int y;
      return 0;
  }
  public int foo(int x){
      int y;
      return 0;
  }
}
